# wmr

./: README.md
covi/: CMakeLists.txt  package.xml
covi/cfg/: CoviBot.cfg  CoviParam.cfg
covi/include/covi/: covi.h
covi/launch/: covi.launch  covi_demo.launch  covi_gazebo.launch  covi_node.launch  covi_spawn.launch  kinect.launch  laser_filter.launch  minimal.launch  move_base.launch
covi/map/: map.yaml  map1.yaml
covi/rviz/: covi.rviz
covi/scripts/: covi_node.py
covi/src/: Makefile  cifxlinux.h  cifxlinuxsample.c  cifxlinuxsample.cpp  cifxsample  covi_node.cpp
covi/worlds/: empty.world
covi/yaml/: base_local_planner_params.yaml  costmap_common_params.yaml  laser_config.yaml  local_costmap_params.yaml
covi_description/: CMakeLists.txt  mainpage.dox  package.xml  test.launch
covi_description/robots/: covi.urdf.xacro  covi_xtion_pro.urdf.xacro
covi_description/sensors/rplidar/: rplidar.xacro
covi_description/urdf/: asus_xtion_pro.urdf.xacro  covi_body.urdf.xacro  covi_calibration.xacro  covi_hardware.urdf.xacro  covi_kinect.urdf.xacro  covi_realsense.urdf.xacro  d435i_camera.urdf.xacro  gazebo.urdf.xacro  rplidar.urdf.xacro
covi_teleop/: CMakeLists.txt  README.md  package.xml
covi_teleop/config/: gamepad.yaml  tempest.yaml
covi_teleop/launch/: keyboard_teleop.launch  logitech.launch  serial.launch  teleop_gamepad.launch  teleop_tempest.launch
covi_teleop/src/: covi_gamepad.cpp  covi_hololens.cpp
realsense-ros/realsense2_camera/launch/: demo_pointcloud_d435i.launch  pointcloud_d435i.launch
(+1 files in other folders)
